[package]
name = "breezert_socketman"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "breezert_socketman"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0"
hyper = { version = "1", features = ["full", "tracing"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "registry",
] }
